fix layout issue netlify

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -213,6 +213,15 @@ body {
   justify-content: center;
 }
 
+.main-parent{
+  display: grid;
+  place-items: center; 
+  height: 100vh;        
+  max-width: 1500px;  
+  width: 100%;          
+  margin: 0 auto;
+}
+
 /* Responsive Layout */
 @media screen and (max-width: 768px) {
   .column {
